# crud_sqlx_axum_tera

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: authors_controller.rs  mod.rs
src/custom_helpers/: mod.rs  uuid_helper.rs
src/db_actions/: authors_db_actions.rs  mod.rs
src/models/: author.rs  author_form.rs  mod.rs
templates/: author_display.html  author_form.html  authors.html
