[package]
name = "crud_sqlx_axum_tera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio-rustls", "uuid" ] }
dotenvy = "0.15"
tokio = { version = "1.29", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
axum = "0.6.19"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
